feat: add password hashing + toggle visibility with icon